@@ -1,5 +1,13 @@
 Monday, August 8th, 2003   Ron Steinke <rsteinke@w-link.net>
 
+	* Forgot to change to 0.3 in wfmath/Makefile.am, fixed that.
+	* Got rid of support for old 'list of lists' encoding
+	  for AxisBox in atlasconv.h. Also got rid of a bunch
+	  of push_back() calls by predeclaring the size of
+	  Atlas::Message::Foo::ListType instances.
+
+Monday, August 8th, 2003   Ron Steinke <rsteinke@w-link.net>
+
 	* Updated version number to 0.3 in preparation for doing
 	  a release next week.
 	* Got rid of wfmath-config, we won't support it in 0.3.
